<resources>
    <string name="app_name">PFA-P</string>
    <string name="title_activity_before_survey">BeforeSurveyActivity</string>
    <string name="action_next">Next</string>
    <string name="display_message">No search results found for prisoner id %1$s in local database. We will create a new ID and start a fresh survey.</string>
    <string name="start_new_survey">Start Survey for a new inmate</string>
    <string name="start_survey_assessment">Start Assessment for old inmate</string>
    <string name="field_prisoner_id">Prisoner ID</string>
    <string name="field_volunteer_id">Volunteer ID</string>
    <string name="field_demographics_status">Socio-Demographics</string>
    <string name="field_basic_questionnaire_status">Basic Questionnaire</string>
    <string name="field_assessment">Assessment for PFAP</string>
    <string name="field_visit_number">Visit Number</string>
    <string name="field_colon">:</string>
    <string name="button_start">START</string>
    <string name="results_section_score">Mean Score = %1$s</string>
    <string name="results_section_score_max">Max Score = %1$s</string>
</resources>
