<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/search_results_found"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5" />

        <LinearLayout
            android:layout_marginBottom="24dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6">

            <LinearLayout
                android:layout_margin="8dp"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/field_prisoner_id"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:gravity="end"
                    android:text="@string/field_prisoner_id"
                    android:textSize="24sp" />

                <TextView
                    android:gravity="center"
                    android:text="@string/field_colon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/value_prisoner_id"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:gravity="start"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/field_volunteer_id"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:gravity="end"
                    android:text="@string/field_volunteer_id"
                    android:textSize="24sp" />

                <TextView
                    android:gravity="center"
                    android:text="@string/field_colon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/value_volunteer_id"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:gravity="start"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/field_demographics"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:gravity="end"
                    android:text="@string/field_demographics_status"
                    android:textSize="24sp" />

                <TextView
                    android:gravity="center"
                    android:text="@string/field_colon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/status_demographics"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:gravity="start"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/field_basic_questionnaire"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:gravity="end"
                    android:text="@string/field_basic_questionnaire_status"
                    android:textSize="24sp" />

                <TextView
                    android:gravity="center"
                    android:text="@string/field_colon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/status_basic_questionnaire"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:gravity="start"
                    android:textSize="24sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/field_assessment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:gravity="end"
                    android:text="@string/field_assessment"
                    android:textSize="24sp" />

                <TextView
                    android:gravity="center"
                    android:text="@string/field_colon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/status_assessment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:gravity="start"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:gravity="end"
                    android:text="@string/field_visit_number"
                    android:id="@+id/field_visit_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:textSize="24sp" />

                <TextView
                    android:gravity="center"
                    android:text="@string/field_colon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="24sp" />

                <TextView
                    android:gravity="start"
                    android:id="@+id/status_visit_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:padding="16dp"
                    android:text="@string/button_start"
                    android:id="@+id/resume_or_next_visit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="32sp" />
            </LinearLayout>
        </LinearLayout>

       <!-- <Space
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:layout_height="0dp" />-->

    </LinearLayout>


    <LinearLayout
        android:id="@+id/search_result_not_found"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="200dp"
        android:layout_marginRight="200dp"
        android:orientation="vertical"
        >

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/not_found_message"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="40dp"
            android:layout_weight="3"
            android:gravity="center"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/start_new"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:textSize="24sp" />

            <Button
                android:id="@+id/start_assessment"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:enabled="false"
                android:textSize="24sp" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />


    </LinearLayout>

</FrameLayout>