<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/disclaimer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="120dp"
            android:layout_weight="1"
            android:padding="100dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_prison" />


        <LinearLayout
            android:id="@+id/not_found_message"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="120dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_marginBottom="24dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <LinearLayout
                    android:layout_margin="8dp"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/field_prisoner_id"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:gravity="start"
                        android:text="@string/field_prisoner_id"
                        android:textSize="24sp" />

                    <TextView
                        android:gravity="center"
                        android:text="@string/field_colon"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/value_prisoner_id"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:gravity="start"
                        android:textSize="24sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_margin="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/field_volunteer_id"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:gravity="start"
                        android:text="@string/field_volunteer_id"
                        android:textSize="24sp" />

                    <TextView
                        android:gravity="center"
                        android:text="@string/field_colon"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/value_volunteer_id"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:gravity="start"
                        android:textSize="24sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_margin="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/field_demographics"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:gravity="start"
                        android:text="@string/field_demographics_status"
                        android:textSize="24sp" />

                    <TextView
                        android:gravity="center"
                        android:text="@string/field_colon"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/status_demographics"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:gravity="start"
                        android:textSize="24sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_margin="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/field_basic_questionnaire"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:gravity="start"
                        android:text="@string/field_basic_questionnaire_status"
                        android:textSize="24sp" />

                    <TextView
                        android:gravity="center"
                        android:text="@string/field_colon"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/status_basic_questionnaire"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:gravity="start"
                        android:textSize="24sp" />
                </LinearLayout>


                <LinearLayout
                    android:layout_margin="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/field_assessment"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:gravity="start"
                        android:text="@string/field_assessment"
                        android:textSize="24sp" />

                    <TextView
                        android:gravity="center"
                        android:text="@string/field_colon"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/status_assessment"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:gravity="start"
                        android:textSize="24sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:gravity="start"
                        android:text="@string/field_visit_number"
                        android:id="@+id/field_visit_number"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:textSize="24sp" />

                    <TextView
                        android:gravity="center"
                        android:text="@string/field_colon"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="24sp" />

                    <TextView
                        android:gravity="start"
                        android:id="@+id/status_visit_number"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:textSize="24sp" />
                </LinearLayout>



            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
</LinearLayout>